Module build failed at .src/index.js 'SyntaxError: Unexpected token (<App />)' inside ReactDOM.render

--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/SHoar/githubprofiles/issues"
   },
-  "homepage": "https://github.com/SHoar/githubprofiles#readme"
+  "homepage": "https://github.com/SHoar/githubprofiles#readme",
+  "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "webpack": "^2.4.1"
+  }
 }
