Change Jumbotron component to a function with PropTypes, frontpage is working... for now :-)

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/SHoar/githubprofiles#readme",
   "dependencies": {
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-preset-react": "^6.24.1",
     "webpack": "^2.4.1"
   }
 }
